# camkes-vm-examples

./: CMakeLists.txt  settings.cmake
apps/LoongArch/vm_cross_connector/: CMakeLists.txt  settings.cmake  vm_cross_connector.camkes
apps/LoongArch/vm_cross_connector/3A5000/: devices.camkes
apps/LoongArch/vm_cross_connector/components/CrossvmInit/: crossvm_init.c  crossvm_init_aes.c  crossvm_init_rsa_1024.c  crossvm_init_rsa_2048.c  crossvm_init_rsa_4096.c  crossvm_init_sha256.c  crossvm_libtom_rsa2048.c
apps/LoongArch/vm_cross_connector/components/CrossvmInit/aes/: aes.h  aes_cbc.c  aes_local.h
apps/LoongArch/vm_cross_connector/components/CrossvmInit/rsa1024/: bignum.h  keys.h  rsa.c  rsa.h
apps/LoongArch/vm_cross_connector/components/CrossvmInit/rsa4096/: rsa.c  rsa.h
apps/LoongArch/vm_cross_connector/src/: cross_vm_connections.c
apps/LoongArch/vm_minimal/: CMakeLists.txt  settings.cmake  vm_minimal.camkes
apps/LoongArch/vm_minimal/3A5000/: devices.camkes
apps/LoongArch/vm_minimal/qemu-arm-virt/: devices.camkes
